<resources>
    <string name="app_name">Diario de Glucosa</string>
    <string name="valores_name">Mis Valores</string>
    <string name="estadisticas_name">Estadisticas</string>
    <string name="cargar_valor_name">Cargar Valor</string>
    <string name="boton_cv_fecha">--/--/--</string>
    <string name="boton_cv_hora">--:--</string>
    <string name="mensaje_cv_momento_medicion">Momento de la Medicion</string>
    <string name="edit_cv_ingresar_valor">Ingrese el Valor</string>
    <string name="mensaje_cv_comentario">AGREGAR COMENTARIO</string>
    <string name="mensaje_cv_fecha">Fecha</string>
    <string name="mensaje_ad_informacion_titulo">Información y Ayuda</string>
    <string name="mensaje_ad_informacion">DiabetesControl – Diario de Glucosa es una aplicación destinada a personas con diabetes, que permite cargar los valores tomados diariamente para el control, permitiendo llevar un registro de estos. Los valores se mostrarán en la pantalla principal ordenados en función de su fecha, es decir, los más recientes se encontrarán primeros y los más antiguos al final. Cada valor se muestra con un color dependiendo si se encuentran dentro o fuera de rango. Los valores fuera de rango se muestran en color rojo. En esta aplicación, se considera fuera de rango a los valores menores o iguales a 70 y mayores o iguales a 170.</string>
    <string name="mensaje_ad_cargar_valores_titulo">Cargar Valores</string>
    <string name="mensaje_ad_cargar_valores">En esta sección se permite la carga de un valor de glucosa, indicando fecha, hora, momento y valor de la medición, pudiéndose ingresar una observación si es necesario.</string>
    <string name="mensaje_ad_estadisticas_titulo">Estadísticas</string>
    <string name="mensaje_ad_estadisticas">En esta sección de la aplicación se mostrarán algunas estadísticas sobre los valores almacenados. Se deberá elegir la cantidad de días que se desea ver así también como el momento del día. Una vez elegido los parámetros, se mostrara el valor promedio, la cantidad de mediciones realizadas, la cantidad de mediciones promedio realizadas, la cantidad de hipoglucemias (es decir, la cantidad de valores menores o iguales a 70) y la cantidad de hiperglucemias (es decir, la cantidad de valores mayores o iguales a 170).</string>
    <string name="mensaje_e_datos_visualizar">Datos a Visualizar</string>
    <string name="mensaje_e_momento_dia">Momento del Dia</string>
    <string name="boton_e_calcular">Calcular</string>
    <string name="mensaje_e_ultimos_dias">Ultimos Dias:</string>
    <string name="mensaje_e_promedio">Promedio</string>
    <string name="mensaje_e_entradas">Entradas</string>
    <string name="mensaje_e_entradas_dia">Entradas/\nDia</string>
    <string name="mensaje_e_hipoglucemias">Hipoglucemias</string>
    <string name="mensaje_e_hiperglucemias">Hiperglucemias</string>

</resources>
